--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,28 @@
     
         </p>
       </div>
-<section class="card">
+<section class="cardCats">
+</section>
+<div class="text-center">
+  <p
+    class="text-base leading-6 text-indigo-600 font-semibold tracking-wide uppercase"
+  >
+    Snowpack
+  </p>
+  <h3
+    class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10"
+  >
+    Tailwind template
+  </h3>
+  <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 mx-auto">
+    Use this template to build awesome websites using Snowpack and
+    Tailwind. It also includes Prettier and automatic publish to GitHub
+    pages using GitHub Actions. Learn more:
+  </p>
 
+  </p>
+</div>
+<section class="cardFavourites">
 </section>
     </section>
 
