--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="user-scalable=no" />
     <meta
       name="description"
       content="Web site created using create-snowpack-app"
@@ -31,48 +32,37 @@
 
       Start modyfing from here.
     -->
-    <section class="py-10 max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8" id="containerCat">
+    <section  aria-live="assertive" aria-atomic="true" class="py-10 max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8" id="containerCat">
       <div class="text-center">
-        <p
-          class="text-base leading-6 text-indigo-600 font-semibold tracking-wide uppercase"
-        >
-          Snowpack
-        </p>
         <h3
           class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10"
         >
-          Tailwind template
+        Agrega tu favorito ♥ !
         </h3>
-        <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 mx-auto">
-          Use this template to build awesome websites using Snowpack and
-          Tailwind. It also includes Prettier and automatic publish to GitHub
-          pages using GitHub Actions. Learn more:
+        <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 mx-auto p-8">
+          Observa todos los michis y agrega tu favorito.
         </p>
     
         </p>
       </div>
-<section class="cardCats">
+<section  aria-live="assertive" aria-atomic="true" class="cardCats pb-4">
 </section>
 <div class="text-center">
-  <p
-    class="text-base leading-6 text-indigo-600 font-semibold tracking-wide uppercase"
-  >
-    Snowpack
-  </p>
+  <button  class=" mt-8 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" id="btnReload">
+    Cargar más michis!!!
+  </button>
   <h3
-    class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10"
-  >
-    Tailwind template
-  </h3>
-  <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 mx-auto">
-    Use this template to build awesome websites using Snowpack and
-    Tailwind. It also includes Prettier and automatic publish to GitHub
-    pages using GitHub Actions. Learn more:
-  </p>
+  class="mt-8 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10"
+>
+Saca el michi que ya no te guste! ♥.
+</h3>
+<p class="max-w-2xl text-xl leading-7 text-gray-500 mx-auto p-8">
+  Puedes eliminar michis! ♥.
+</p>
 
   </p>
 </div>
-<section class="cardFavourites">
+<section  aria-live="assertive" aria-atomic="true" class="cardFavourites">
 </section>
     </section>
 
