remove photo url

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwx2Van3Kho2ek_xlKLrgknteUNEVTm_52HA&s" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="user-scalable=no" />
     <meta
@@ -21,7 +21,7 @@
       type="text/css"
       href="%PUBLIC_URL%/_dist_/index.css"
     />
-    <title>Snowpack & Tailwind App</title>
+    <title>Michis al ataque</title>
   </head>
   <body>
     <!--
